--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 
     <section class="tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-[10%] tw-bg-[#EFEFEF] tw-p-[5%] tw-px-[10%]">
       <div class="tw-mt-[5%] tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-3">
-        <h2 class="primary-text-color tw-text-3xl max-md:tw-text-xl">Suka Kami?</h2>
-        <h2 class="tw-text-xl max-md:tw-text-lg">Beri Nilai!</h2>
+        <h2 class="primary-text-color tw-text-3xl max-md:tw-text-xl">HUBUNGI KAMI!</h2>
+        <h2 class="tw-text-xl max-md:tw-text-lg"><STRONG>0812-4331-0102</STRONG></h2>
 
         <div class="tw-flex">
           <div class="stars" data-rating="0">
