--- a/index.html
+++ b/index.html
@@ -190,16 +190,9 @@
       <div class="tw-mt-[5%] tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-3">
         <h2 class="primary-text-color tw-text-3xl max-md:tw-text-xl">HUBUNGI KAMI!</h2>
         <h2 class="tw-text-xl max-md:tw-text-lg"><STRONG>0812-4331-0102</STRONG></h2>
-
-        <div class="tw-flex">
-          <div class="stars" data-rating="0">
-            <span class="star" data-value="1">&#9733;</span>
-            <span class="star" data-value="2">&#9733;</span>
-            <span class="star" data-value="3">&#9733;</span>
-            <span class="star" data-value="4">&#9733;</span>
-            <span class="star" data-value="5">&#9733;</span>
-          </div>
-        </div>
+          <a href="https://wa.me/6281243310102" class="btn tw-mt-5 tw-transition-transform tw-duration-[0.3s] hover:tw-translate-x-2 max-md:tw-mx-auto">
+            <span>whatsapp</span>
+          </a>
       </div>
     </section>
 
