--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             seperti semen, pasir, dan besi, hingga finishing seperti keramik dan cat, dengan komitmen untuk menawarkan produk berkualitas terbaik, harga yang kompetitif, serta pelayanan yang ramah dan profesional untuk mendukung kelancaran
             setiap proyek pembangunan Anda.
           </div>
-          <a href="https://maps.app.goo.gl/SV1uBX2xSYiD4sFa8" class="btn tw-mt-5 tw-transition-transform tw-duration-[0.3s] hover:tw-translate-x-2 max-md:tw-mx-auto">
+          <a href="https://maps.app.goo.gl/UDLuGt2QAKxxafrM7" class="btn tw-mt-5 tw-transition-transform tw-duration-[0.3s] hover:tw-translate-x-2 max-md:tw-mx-auto">
             <span>Lihat Lokasi</span>
             <i class="bi bi-arrow-right"></i>
           </a>
@@ -174,15 +174,7 @@
     <section class="tw-mt-5 tw-flex tw-w-full tw-flex-col tw-place-items-center tw-p-[5%]" id="lokasi">
       <div class="tw-mt-[5%] tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-5">
         <h2 class="primary-text-color tw-text-3xl">Lokasi</h2>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d352.5886585838021!2d122.72209456174747!3d-1.0983095654625228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sid!2sid!4v1765113851001!5m2!1sid!2sid"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d249.31783597434617!2d122.72222241128841!3d-1.0982553792111645!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d8419000fc364c7%3A0x8169842ff373a2c1!2sToko%20Bangunan%20Milapandero%2088!5e0!3m2!1sid!2sid!4v1765118236280!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
 
