--- a/index.html
+++ b/index.html
@@ -171,12 +171,22 @@
       </div>
     </section>
 
-    <section class="tw-mt-5 tw-flex tw-w-full tw-flex-col tw-place-items-center tw-p-[5%]" id="lokasi">
-      <div class="tw-mt-[5%] tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-5">
-        <h2 class="primary-text-color tw-text-3xl">Lokasi</h2>
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d249.31783597434617!2d122.72222241128841!3d-1.0982553792111645!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d8419000fc364c7%3A0x8169842ff373a2c1!2sToko%20Bangunan%20Milapandero%2088!5e0!3m2!1sid!2sid!4v1765118236280!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-    </section>
+<section class="tw-mt-5 tw-flex tw-w-full tw-flex-col tw-place-items-center tw-p-[5%]" id="lokasi">
+  <div class="tw-mt-[5%] tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-5">
+    <h2 class="primary-text-color tw-text-3xl">Lokasi</h2>
+
+    <div class="tw-relative tw-w-full tw-overflow-hidden tw-rounded-xl" style="padding-bottom:56.25%;">
+      <iframe 
+        class="tw-absolute tw-left-0 tw-top-0 tw-h-full tw-w-full tw-rounded-xl"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d249.31783597434617!2d122.72222241128841!3d-1.0982553792111645!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d8419000fc364c7%3A0x8169842ff373a2c1!2sToko%20Bangunan%20Milapandero%2088!5e0!3m2!1sid!2sid!4v1765118236280!5m2!1sid!2sid"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+
+  </div>
+</section>
 
     <section class="tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-[10%] tw-bg-[#EFEFEF] tw-p-[5%] tw-px-[10%]">
       <div class="tw-mt-[5%] tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-3">
